--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel source --presets babel-preset-es2015-node4 --out-dir dist",
+    "build": "babel src --presets babel-preset-es2015-node4 --out-dir dist",
     "prepublish": "npm run build"
   },
   "repository": {
