--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/client.js",
   "scripts": {
     "test": "jest",
+    "coverage": "jest --coverage",
+    "coveralls": "cat coverage/lcov.info | coveralls",
+    "lint": "eslint .",
     "build": "babel src --out-dir dist",
     "prepublish": "npm run build"
   },
@@ -38,15 +41,17 @@
     "babel-core": "^6.9.1",
     "babel-jest": "^12.1.0",
     "babel-preset-es2015-node4": "^2.1.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.11.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.1",
     "jest-cli": "^12.1.1"
   },
   "engines": {
-    "node": ">=4.3.2"
+    "node": "4.3.2"
   },
   "jest": {
-    "testDirectoryName": "tests"
+    "testDirectoryName": "tests",
+    "collectCoverage": true
   }
 }
