--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "no-unused-expressions": 0,
     "object-curly-spacing": [2, "always"],
     "space-in-parens": [2, "never"],
+    "space-before-function-paren": [2, "never"],
     "strict": [2, "function"]
   },
   "ecmaFeatures": {
