--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ cache:
 install:
   - npm link
   - npm install
-test:
+script:
   - npm run lint
-  - npm run coverage
-after_test:
+  - npm run test
+after_script:
   - npm run coveralls
 deploy:
   provider: npm
