--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "node": "4.3.2"
   },
   "jest": {
-    "testDirectoryName": "tests",
+    "testRegex": "tests/.*.js$",
+    "mocksPattern": "(?:[\\/]|^)mocks[\\/]",
     "collectCoverage": true
   }
 }
