--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "func-names": 0,
     "indent": [2, 2, {"SwitchCase": 0}],
     "max-len": [2, 117, 2],
+    "newline-per-chained-call": 0,
     "no-alert": 2,
     "no-console": 0,
     "no-constant-condition": 2,
