--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "aws-sdk": "^2.3.16",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "ini": "^1.3.4",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
