--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-console": 0,
     "no-constant-condition": 2,
     "no-debugger": 2,
+    "no-else-return": 0,
     "no-eq-null": 0,
     "no-extra-strict": 0,
     "no-undef": 2,
