--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ after_script:
   - npm run coveralls
 deploy:
   provider: npm
+  email: bjacobel@gmail.com
   api_key: $NPM_API_KEY
   on:
     tags: true
