--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/bjacobel/vinz#readme",
   "dependencies": {
-    "aws-sdk": "^2.3.16",
+    "aws-sdk-umd": "0.0.2",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "ini": "^1.3.4",
