--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "jest-cli": "^12.1.1"
   },
   "engines": {
-    "node": "4.3.2"
+    "node": ">=4.3.2"
   },
   "jest": {
     "testRegex": "tests/.*-test.js$",
